Bug fixes.